<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- Username EditText -->

    <TextView
        android:id="@+id/Welcome_text"
        android:layout_width="271dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="51dp"
        android:fontFamily="@font/futura_boldfont"
        android:gravity="top"
        android:text="@string/log_into_yo"
        android:textAppearance="@style/log_into_yo"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Password EditText -->

    <!-- Login Button -->

    <!-- or login with -->

    <!-- Register TextView -->

    <EditText
        android:id="@+id/et_username"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="70dp"
        android:backgroundTint="@color/black"
        android:drawableLeft="@drawable/email_ic"
        android:drawablePadding="10dp"
        android:hint="@string/email_hint"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:textColorHint="#808080"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/Welcome_text" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="37dp"
        android:backgroundTint="@color/black"
        android:drawableLeft="@drawable/pass_ic"
        android:drawableRight="@drawable/showpass_ic"
        android:drawablePadding="10dp"
        android:hint="@string/pass_hint"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColorHint="#808080"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/et_username" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="55dp"
        android:elevation="4dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="Login"
        app:backgroundTint="@color/purple_Btn"
        app:cornerRadius="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_pass" />

    <TextView
        android:id="@+id/forgot_pass"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:text="@string/forgot_pass"
        android:textAppearance="@style/forg_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <!-- Draw line
    <View
        android:id="@+id/line_5"
        android:layout_width="103dp"
        android:layout_height="0dp"

        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/black"

        /> -->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_log_faacebook"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="55dp"
        android:drawableLeft="@drawable/fb_icon"
        android:elevation="4dp"
        android:paddingLeft="10dp"
        android:text="@string/login_fb"
        android:textAlignment="center"
        android:textAppearance="@style/btn_login_opt"
        android:textColor="@color/black"
        app:backgroundTint="@color/white"
        app:cornerRadius="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_log_google" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_log_google"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="55dp"
        android:drawableLeft="@drawable/flat_color_icons_google"
        android:elevation="4dp"
        android:paddingLeft="10dp"
        android:text="@string/login_gog"
        android:textAlignment="center"
        android:textAppearance="@style/btn_login_opt"
        android:textColor="@color/black"
        app:backgroundTint="@color/white"
        app:cornerRadius="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="19dp"
        android:text="@string/signUp_txt"
        android:textAppearance="@style/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="20dp"
        android:background="#808080"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="55dp"
        android:background="#808080"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="180dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="180dp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="or"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        android:gravity="center"
        android:textSize="12sp" />

</androidx.constraintlayout.widget.ConstraintLayout>


